--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -6,5 +6,6 @@
     <string name="menu_settings">Settings</string>
     <string name="button_send">Send</string>
     <string name="title_activity_display_search_results">DisplaySearchResultsActivity</string>
+    <string name="title_activity_display_course_details">DisplayCourseDetails</string>
 
 </resources>
