--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -2,9 +2,10 @@
 <resources>
 
     <string name="app_name">MyNoppaApp</string>
-    <string name="hello_world">Hello world!</string>
+    <string name="instruction">Search for courses from noppa portal!</string>
+    <string name="type_course_name">Type search word</string>
     <string name="menu_settings">Settings</string>
-    <string name="button_send">Send</string>
+    <string name="button_send">Search</string>
     <string name="title_activity_display_search_results">DisplaySearchResultsActivity</string>
     <string name="title_activity_display_course_details">DisplayCourseDetails</string>
 
