User can save courses to his profile. Text file is read when DisplayUserProfile.java activity is started. User can't remove courses from profile. Added classes user and session that don't do anything.

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -14,6 +14,10 @@
     <string name="course_lectures">Lectures and Exercises</string>
     <string name="course_results">Results</string>
     <string name="course_assignments">Assignments</string>
+    <string name="user_profile">Saved courses</string>
+    <string name="title_activity_user_profile">UserProfile</string>
+    <string name="save_to_courses">Save to my courses</string>
+   
     
 
 </resources>
